// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Gradient tests > When view is temperature_2m, gradient is created 1`] = `
.emotion-0 {
  position: relative;
  border: 1px solid #ffffff19;
  border-radius: var(--border-radius);
  overflow: hidden;
  width: 100%;
  height: 100%;
  display: block;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: absolute;
  height: 100px;
  padding: 10px;
  white-space: nowrap;
}

<div>
  <svg
    class="emotion-0 emotion-1"
    preserveAspectRatio="xMidYMid meet"
    viewBox="0 0 0 0"
  >
    <svg
      class="emotion-0 emotion-1"
      preserveAspectRatio="xMidYMid meet"
      viewBox="0 0 0 0"
    >
      <g
        data-testid="CHART_AXES_X"
        fill="none"
        font-family="sans-serif"
        font-size="10"
        style="font: system-ui 16px 16px;"
        text-anchor="middle"
        transform="translate(0, -40)"
      >
        <path
          class="domain"
          d="M40.5,6V0.5H-9.5V6"
          stroke="currentColor"
        />
        <g
          class="tick"
          opacity="1"
          transform="translate(40.5,0)"
        >
          <line
            stroke="currentColor"
            y2="6"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="9"
          >
            12 AM
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(27.45652173913043,0)"
        >
          <line
            stroke="currentColor"
            y2="6"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="9"
          >
            6 AM
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(14.41304347826087,0)"
        >
          <line
            stroke="currentColor"
            y2="6"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="9"
          >
            12 PM
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(1.3695652173913038,0)"
        >
          <line
            stroke="currentColor"
            y2="6"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="9"
          >
            6 PM
          </text>
        </g>
      </g>
      <g
        data-testid="CHART_AXES_Y"
        fill="none"
        font-family="sans-serif"
        font-size="10"
        style="font: system-ui 16px 16px;"
        text-anchor="end"
        transform="translate(40, 0)"
      >
        <path
          class="domain"
          d="M-6,-39.5H0.5V120.5H-6"
          stroke="currentColor"
        />
        <g
          class="tick"
          opacity="1"
          transform="translate(0,-39.5)"
        >
          <line
            stroke="currentColor"
            x2="-6"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-9"
          >
            60
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,-12.833333333333336)"
        >
          <line
            stroke="currentColor"
            x2="-6"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-9"
          >
            65
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,13.833333333333329)"
        >
          <line
            stroke="currentColor"
            x2="-6"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-9"
          >
            70
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,40.5)"
        >
          <line
            stroke="currentColor"
            x2="-6"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-9"
          >
            75
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,67.16666666666666)"
        >
          <line
            stroke="currentColor"
            x2="-6"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-9"
          >
            80
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,93.83333333333333)"
        >
          <line
            stroke="currentColor"
            x2="-6"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-9"
          >
            85
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,120.5)"
        >
          <line
            stroke="currentColor"
            x2="-6"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-9"
          >
            90
          </text>
        </g>
      </g>
      <g
        data-testid="CHART_AXES_X_GRID"
        fill="none"
        font-family="sans-serif"
        font-size="10"
        text-anchor="middle"
        transform="translate(0, -40)"
      >
        <path
          class="domain"
          d="M40.5,160V0.5H-9.5V160"
          stroke="#ffffff19"
        />
        <g
          class="tick"
          opacity="1"
          transform="translate(40.5,0)"
        >
          <line
            stroke="#ffffff19"
            y2="160"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="163"
          />
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(33.97826086956522,0)"
        >
          <line
            stroke="#ffffff19"
            y2="160"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="163"
          />
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(27.45652173913043,0)"
        >
          <line
            stroke="#ffffff19"
            y2="160"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="163"
          />
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(20.934782608695652,0)"
        >
          <line
            stroke="#ffffff19"
            y2="160"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="163"
          />
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(14.41304347826087,0)"
        >
          <line
            stroke="#ffffff19"
            y2="160"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="163"
          />
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(7.891304347826086,0)"
        >
          <line
            stroke="#ffffff19"
            y2="160"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="163"
          />
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(1.3695652173913038,0)"
        >
          <line
            stroke="#ffffff19"
            y2="160"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="163"
          />
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(-5.152173913043476,0)"
        >
          <line
            stroke="#ffffff19"
            y2="160"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="163"
          />
        </g>
      </g>
      <g
        data-testid="CHART_AXES_Y_GRID"
        fill="none"
        font-family="sans-serif"
        font-size="10"
        text-anchor="end"
        transform="translate(40, 0)"
      >
        <path
          class="domain"
          d="M-50,-39.5H0.5V120.5H-50"
          stroke="#ffffff19"
        />
        <g
          class="tick"
          opacity="1"
          transform="translate(0,-39.5)"
        >
          <line
            stroke="#ffffff19"
            x2="-50"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-53"
          />
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,-12.833333333333336)"
        >
          <line
            stroke="#ffffff19"
            x2="-50"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-53"
          />
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,13.833333333333329)"
        >
          <line
            stroke="#ffffff19"
            x2="-50"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-53"
          />
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,40.5)"
        >
          <line
            stroke="#ffffff19"
            x2="-50"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-53"
          />
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,67.16666666666666)"
        >
          <line
            stroke="#ffffff19"
            x2="-50"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-53"
          />
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,93.83333333333333)"
        >
          <line
            stroke="#ffffff19"
            x2="-50"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-53"
          />
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,120.5)"
        >
          <line
            stroke="#ffffff19"
            x2="-50"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-53"
          />
        </g>
      </g>
      <g>
        0
        <defs>
          <lineargradient
            id=":r9:"
            x1="0"
            x2="0"
            y1="0"
            y2="1"
          >
            <stop
              offset="0%"
              stop-color="hsl(99.16666666666666deg, 100%, 50%)"
            />
            <stop
              offset="100%"
              stop-color="hsl(117.29166666666666deg, 100%, 50%)"
            />
          </lineargradient>
        </defs>
        1
      </g>
      <g>
        <rect
          fill="#000"
          fill-opacity="0.25"
          height="-160"
          width="-45.65217391304348"
          x="40"
          y="120"
        />
        <line
          stroke="#fff"
          stroke-width="1"
          x1="-5.652173913043476"
          x2="-5.652173913043476"
          y1="120"
          y2="-40"
        />
      </g>
      <g>
        <foreignobject
          height="100px"
          width="100%"
        >
          <div
            class="emotion-4 emotion-5"
          >
            <span>
              Now
            </span>
            <h1>
              65.6°
            </h1>
            <h3>
              Feels: 67.9°
            </h3>
          </div>
        </foreignobject>
        <line
          stroke="#fff"
          stroke-width="2"
          style="display: none;"
        />
      </g>
      <line
        stroke="#ffffff19"
        stroke-width="1"
        x1="0"
        x2="100%"
        y1="100"
        y2="100"
      />
    </svg>
  </svg>
</div>
`;

exports[`Gradient tests > When view is us_aqi, gradient is created 1`] = `
.emotion-0 {
  position: relative;
  border: 1px solid #ffffff19;
  border-radius: var(--border-radius);
  overflow: hidden;
  width: 100%;
  height: 100%;
  display: block;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: absolute;
  height: 100px;
  padding: 10px;
  white-space: nowrap;
}

<div>
  <svg
    class="emotion-0 emotion-1"
    preserveAspectRatio="xMidYMid meet"
    viewBox="0 0 0 0"
  >
    <svg
      class="emotion-0 emotion-1"
      preserveAspectRatio="xMidYMid meet"
      viewBox="0 0 0 0"
    >
      <g
        data-testid="CHART_AXES_X"
        fill="none"
        font-family="sans-serif"
        font-size="10"
        style="font: system-ui 16px 16px;"
        text-anchor="middle"
        transform="translate(0, -40)"
      >
        <path
          class="domain"
          d="M40.5,6V0.5H-9.5V6"
          stroke="currentColor"
        />
        <g
          class="tick"
          opacity="1"
          transform="translate(40.5,0)"
        >
          <line
            stroke="currentColor"
            y2="6"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="9"
          >
            12 AM
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(27.45652173913043,0)"
        >
          <line
            stroke="currentColor"
            y2="6"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="9"
          >
            6 AM
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(14.41304347826087,0)"
        >
          <line
            stroke="currentColor"
            y2="6"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="9"
          >
            12 PM
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(1.3695652173913038,0)"
        >
          <line
            stroke="currentColor"
            y2="6"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="9"
          >
            6 PM
          </text>
        </g>
      </g>
      <g
        data-testid="CHART_AXES_Y"
        fill="none"
        font-family="sans-serif"
        font-size="10"
        style="font: system-ui 16px 16px;"
        text-anchor="end"
        transform="translate(40, 0)"
      >
        <path
          class="domain"
          d="M-6,-39.5H0.5V120.5H-6"
          stroke="currentColor"
        />
        <g
          class="tick"
          opacity="1"
          transform="translate(0,-39.5)"
        >
          <line
            stroke="currentColor"
            x2="-6"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-9"
          >
            30
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,-12.833333333333336)"
        >
          <line
            stroke="currentColor"
            x2="-6"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-9"
          >
            35
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,13.833333333333329)"
        >
          <line
            stroke="currentColor"
            x2="-6"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-9"
          >
            40
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,40.5)"
        >
          <line
            stroke="currentColor"
            x2="-6"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-9"
          >
            45
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,67.16666666666666)"
        >
          <line
            stroke="currentColor"
            x2="-6"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-9"
          >
            50
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,93.83333333333333)"
        >
          <line
            stroke="currentColor"
            x2="-6"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-9"
          >
            55
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,120.5)"
        >
          <line
            stroke="currentColor"
            x2="-6"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-9"
          >
            60
          </text>
        </g>
      </g>
      <g
        data-testid="CHART_AXES_X_GRID"
        fill="none"
        font-family="sans-serif"
        font-size="10"
        text-anchor="middle"
        transform="translate(0, -40)"
      >
        <path
          class="domain"
          d="M40.5,160V0.5H-9.5V160"
          stroke="#ffffff19"
        />
        <g
          class="tick"
          opacity="1"
          transform="translate(40.5,0)"
        >
          <line
            stroke="#ffffff19"
            y2="160"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="163"
          />
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(33.97826086956522,0)"
        >
          <line
            stroke="#ffffff19"
            y2="160"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="163"
          />
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(27.45652173913043,0)"
        >
          <line
            stroke="#ffffff19"
            y2="160"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="163"
          />
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(20.934782608695652,0)"
        >
          <line
            stroke="#ffffff19"
            y2="160"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="163"
          />
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(14.41304347826087,0)"
        >
          <line
            stroke="#ffffff19"
            y2="160"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="163"
          />
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(7.891304347826086,0)"
        >
          <line
            stroke="#ffffff19"
            y2="160"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="163"
          />
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(1.3695652173913038,0)"
        >
          <line
            stroke="#ffffff19"
            y2="160"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="163"
          />
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(-5.152173913043476,0)"
        >
          <line
            stroke="#ffffff19"
            y2="160"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="163"
          />
        </g>
      </g>
      <g
        data-testid="CHART_AXES_Y_GRID"
        fill="none"
        font-family="sans-serif"
        font-size="10"
        text-anchor="end"
        transform="translate(40, 0)"
      >
        <path
          class="domain"
          d="M-50,-39.5H0.5V120.5H-50"
          stroke="#ffffff19"
        />
        <g
          class="tick"
          opacity="1"
          transform="translate(0,-39.5)"
        >
          <line
            stroke="#ffffff19"
            x2="-50"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-53"
          />
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,-12.833333333333336)"
        >
          <line
            stroke="#ffffff19"
            x2="-50"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-53"
          />
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,13.833333333333329)"
        >
          <line
            stroke="#ffffff19"
            x2="-50"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-53"
          />
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,40.5)"
        >
          <line
            stroke="#ffffff19"
            x2="-50"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-53"
          />
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,67.16666666666666)"
        >
          <line
            stroke="#ffffff19"
            x2="-50"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-53"
          />
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,93.83333333333333)"
        >
          <line
            stroke="#ffffff19"
            x2="-50"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-53"
          />
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,120.5)"
        >
          <line
            stroke="#ffffff19"
            x2="-50"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-53"
          />
        </g>
      </g>
      <g>
        0
        <defs>
          <lineargradient
            gradientUnits="userSpaceOnUse"
            id=":rb:"
            x1="0"
            x2="0"
            y1="120"
            y2="-40"
          >
            <stop
              offset="-14.666666666666666"
              stop-color="#6D0000"
            />
            <stop
              offset="-8"
              stop-color="#8400FF"
            />
            <stop
              offset="-4.666666666666667"
              stop-color="#FF2204"
            />
            <stop
              offset="-3"
              stop-color="#FF9431"
            />
            <stop
              offset="-1.3333333333333335"
              stop-color="#FFF501"
            />
            <stop
              offset="0.33333333333333337"
              stop-color="#00FF66"
            />
          </lineargradient>
        </defs>
      </g>
      <g>
        <rect
          fill="#000"
          fill-opacity="0.25"
          height="-160"
          width="-45.65217391304348"
          x="40"
          y="120"
        />
        <line
          stroke="#fff"
          stroke-width="1"
          x1="-5.652173913043476"
          x2="-5.652173913043476"
          y1="120"
          y2="-40"
        />
      </g>
      <g>
        <foreignobject
          height="100px"
          width="100%"
        >
          <div
            class="emotion-4 emotion-5"
          >
            <span>
              Now
            </span>
            <h1>
              44
            </h1>
            <h3>
              Good
            </h3>
          </div>
        </foreignobject>
        <line
          stroke="#fff"
          stroke-width="2"
          style="display: none;"
        />
      </g>
      <line
        stroke="#ffffff19"
        stroke-width="1"
        x1="0"
        x2="100%"
        y1="100"
        y2="100"
      />
    </svg>
  </svg>
</div>
`;

exports[`Gradient tests > When view is uv_index, gradient is created 1`] = `
.emotion-0 {
  position: relative;
  border: 1px solid #ffffff19;
  border-radius: var(--border-radius);
  overflow: hidden;
  width: 100%;
  height: 100%;
  display: block;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: absolute;
  height: 100px;
  padding: 10px;
  white-space: nowrap;
}

<div>
  <svg
    class="emotion-0 emotion-1"
    preserveAspectRatio="xMidYMid meet"
    viewBox="0 0 0 0"
  >
    <svg
      class="emotion-0 emotion-1"
      preserveAspectRatio="xMidYMid meet"
      viewBox="0 0 0 0"
    >
      <g
        data-testid="CHART_AXES_X"
        fill="none"
        font-family="sans-serif"
        font-size="10"
        style="font: system-ui 16px 16px;"
        text-anchor="middle"
        transform="translate(0, -40)"
      >
        <path
          class="domain"
          d="M40.5,6V0.5H-9.5V6"
          stroke="currentColor"
        />
        <g
          class="tick"
          opacity="1"
          transform="translate(40.5,0)"
        >
          <line
            stroke="currentColor"
            y2="6"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="9"
          >
            12 AM
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(27.45652173913043,0)"
        >
          <line
            stroke="currentColor"
            y2="6"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="9"
          >
            6 AM
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(14.41304347826087,0)"
        >
          <line
            stroke="currentColor"
            y2="6"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="9"
          >
            12 PM
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(1.3695652173913038,0)"
        >
          <line
            stroke="currentColor"
            y2="6"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="9"
          >
            6 PM
          </text>
        </g>
      </g>
      <g
        data-testid="CHART_AXES_Y"
        fill="none"
        font-family="sans-serif"
        font-size="10"
        style="font: system-ui 16px 16px;"
        text-anchor="end"
        transform="translate(40, 0)"
      >
        <path
          class="domain"
          d="M-6,-39.5H0.5V120.5H-6"
          stroke="currentColor"
        />
        <g
          class="tick"
          opacity="1"
          transform="translate(0,-39.5)"
        >
          <line
            stroke="currentColor"
            x2="-6"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-9"
          >
            0
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,-10.409090909090907)"
        >
          <line
            stroke="currentColor"
            x2="-6"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-9"
          >
            2
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,18.681818181818187)"
        >
          <line
            stroke="currentColor"
            x2="-6"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-9"
          >
            4
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,47.772727272727266)"
        >
          <line
            stroke="currentColor"
            x2="-6"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-9"
          >
            6
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,76.86363636363637)"
        >
          <line
            stroke="currentColor"
            x2="-6"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-9"
          >
            8
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,105.95454545454545)"
        >
          <line
            stroke="currentColor"
            x2="-6"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-9"
          >
            10
          </text>
        </g>
      </g>
      <g
        data-testid="CHART_AXES_X_GRID"
        fill="none"
        font-family="sans-serif"
        font-size="10"
        text-anchor="middle"
        transform="translate(0, -40)"
      >
        <path
          class="domain"
          d="M40.5,160V0.5H-9.5V160"
          stroke="#ffffff19"
        />
        <g
          class="tick"
          opacity="1"
          transform="translate(40.5,0)"
        >
          <line
            stroke="#ffffff19"
            y2="160"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="163"
          />
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(33.97826086956522,0)"
        >
          <line
            stroke="#ffffff19"
            y2="160"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="163"
          />
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(27.45652173913043,0)"
        >
          <line
            stroke="#ffffff19"
            y2="160"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="163"
          />
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(20.934782608695652,0)"
        >
          <line
            stroke="#ffffff19"
            y2="160"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="163"
          />
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(14.41304347826087,0)"
        >
          <line
            stroke="#ffffff19"
            y2="160"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="163"
          />
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(7.891304347826086,0)"
        >
          <line
            stroke="#ffffff19"
            y2="160"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="163"
          />
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(1.3695652173913038,0)"
        >
          <line
            stroke="#ffffff19"
            y2="160"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="163"
          />
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(-5.152173913043476,0)"
        >
          <line
            stroke="#ffffff19"
            y2="160"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="163"
          />
        </g>
      </g>
      <g
        data-testid="CHART_AXES_Y_GRID"
        fill="none"
        font-family="sans-serif"
        font-size="10"
        text-anchor="end"
        transform="translate(40, 0)"
      >
        <path
          class="domain"
          d="M-50,-39.5H0.5V120.5H-50"
          stroke="#ffffff19"
        />
        <g
          class="tick"
          opacity="1"
          transform="translate(0,-39.5)"
        >
          <line
            stroke="#ffffff19"
            x2="-50"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-53"
          />
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,-10.409090909090907)"
        >
          <line
            stroke="#ffffff19"
            x2="-50"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-53"
          />
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,18.681818181818187)"
        >
          <line
            stroke="#ffffff19"
            x2="-50"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-53"
          />
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,47.772727272727266)"
        >
          <line
            stroke="#ffffff19"
            x2="-50"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-53"
          />
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,76.86363636363637)"
        >
          <line
            stroke="#ffffff19"
            x2="-50"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-53"
          />
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,105.95454545454545)"
        >
          <line
            stroke="#ffffff19"
            x2="-50"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-53"
          />
        </g>
      </g>
      <g>
        0
        <defs>
          <lineargradient
            gradientUnits="userSpaceOnUse"
            id=":ra:"
            x1="0"
            x2="0"
            y1="120"
            y2="-40"
          >
            <stop
              offset="0"
              stop-color="#FF00D6"
            />
            <stop
              offset="0.09090909090909094"
              stop-color="#FF2204"
            />
            <stop
              offset="0.36363636363636365"
              stop-color="#FF9431"
            />
            <stop
              offset="0.5454545454545454"
              stop-color="#FFF501"
            />
            <stop
              offset="0.8181818181818181"
              stop-color="#00FF66"
            />
          </lineargradient>
        </defs>
      </g>
      <g>
        <rect
          fill="#000"
          fill-opacity="0.25"
          height="-160"
          width="-45.65217391304348"
          x="40"
          y="120"
        />
        <line
          stroke="#fff"
          stroke-width="1"
          x1="-5.652173913043476"
          x2="-5.652173913043476"
          y1="120"
          y2="-40"
        />
      </g>
      <g>
        <foreignobject
          height="100px"
          width="100%"
        >
          <div
            class="emotion-4 emotion-5"
          >
            <span>
              Now
            </span>
            <h1>
              0
            </h1>
            <h3>
              Low
            </h3>
          </div>
        </foreignobject>
        <line
          stroke="#fff"
          stroke-width="2"
          style="display: none;"
        />
      </g>
      <line
        stroke="#ffffff19"
        stroke-width="1"
        x1="0"
        x2="100%"
        y1="100"
        y2="100"
      />
    </svg>
  </svg>
</div>
`;
